--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,8 @@
 ---
+import '../styles/globals.scss';
+import Header from '../components/Header/Header.astro';
+import { ViewTransitions } from 'astro:transitions';
+
 interface Props {
     title?: string;
 }
@@ -13,8 +17,10 @@ const { title } = Astro.props;
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
         <title>{title ? `${title} | Naman Arora` : 'Naman Arora'}</title>
+        <ViewTransitions />
     </head>
     <body>
+        <Header transition:name="header" />
         <slot />
     </body>
 </html>
